WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26820
Fix an inverted null check in V8Proxy
https://bugs.webkit.org/show_bug.cgi?id=26820
Summary
Fix an inverted null check in V8Proxy
Nate Chapin
Reported
2009-06-29 16:49:58 PDT
See summary.
Attachments
patch
(1.11 KB, patch)
2009-06-29 16:52 PDT
,
Nate Chapin
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2009-06-29 16:52:01 PDT
Created
attachment 32027
[details]
patch
Eric Seidel (no email)
Comment 2
2009-06-29 17:40:31 PDT
I'm looking for a bug to test changes to bugzilla-tool with. This one, being simple and easy seems perfect. So I'll land this one for you in about 5 minutes unless someone beats me to it. :)
Eric Seidel (no email)
Comment 3
2009-06-29 17:41:15 PDT
Does this not affect layout tests? I would have expected to see either tests added or results changed?
David Levin
Comment 4
2009-06-29 17:52:35 PDT
Comment on
attachment 32027
[details]
patch Either it needs a layout test or a comment about what layout test is being fixed.
Dimitri Glazkov (Google)
Comment 5
2009-06-30 09:21:51 PDT
Comment on
attachment 32027
[details]
patch This was a mis-type that occurred during upstreaming. It was discovered as a failure of an existing test, but the test hasn't yet been upstreamed:
http://src.chromium.org/viewvc/chrome/trunk/src/webkit/data/layout_tests/chrome/fast/dom/messageport-gc.html?revision=5770&view=markup
The test needs some cleaning up before upstreaming and I am hesitant to hold up this fix for that.
Nate Chapin
Comment 6
2009-06-30 09:27:07 PDT
Landed as
r45377
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug