2009-06-30  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix inverted if/else that's causing a layout test in src.chromium.org to fail.

        https://bugs.webkit.org/show_bug.cgi?id=26820



Canonical link: https://commits.webkit.org/37059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45377 268f45cc-cd09-0410-ab3c-d52691b4dbfc