WebCore/bindings/v8/V8Proxy.cpp
@@ -353,7 +353,7 @@ public:
         if (port1->isEntangled() && !port2)
             wrapper.ClearWeak();
 
-        if (!port2) {
+        if (port2) {
             // As ports are always entangled in pairs only perform the entanglement
             // once for each pair (see ASSERT in MessagePort::unentangle()).
             if (port1 < port2) {
